--- a/Shop.MAUI/AppShell.xaml
+++ b/Shop.MAUI/AppShell.xaml
@@ -4,6 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Shop.MAUI"
+    xmlns:views="clr-namespace:Shop.MAUI.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="Shop.MAUI">
 
@@ -11,5 +12,17 @@
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
+    <ShellContent
+        Title="Inventory"
+        ContentTemplate="{DataTemplate views:InventoryView}"
+        Route="InventoryPage" />
+    <ShellContent
+        Title="Shop"
+        ContentTemplate="{DataTemplate views:ShopView}"
+        Route="ShopPage" />
+    <ShellContent
+        Title="Add Product"
+        ContentTemplate="{DataTemplate views:AddProductView}"
+        Route="AddProductPage" />
 
 </Shell>
