--- a/Shop.MAUI/Views/InventoryView.xaml
+++ b/Shop.MAUI/Views/InventoryView.xaml
@@ -2,9 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Shop.MAUI.Views.InventoryView"
-             Title="InventoryView">
+             Title="Inventory">
     <VerticalStackLayout>
-        
         <Button Text="Add Product" Clicked="GoToAddProductPage"/>
         <Button Text="Home" Clicked="GoToHomePage"/>
         
