--- a/Shop.MAUI/Views/AddProductView.xaml
+++ b/Shop.MAUI/Views/AddProductView.xaml
@@ -32,29 +32,36 @@
                    FontAttributes="Bold"
                     TextColor="#605F4F" 
                    VerticalOptions="Center"/>
-            <Entry Grid.Row="0" Grid.Column="1" BackgroundColor="White" HorizontalOptions="FillAndExpand"/>
+            <Entry Text="{Binding Model.Name}"
+                Grid.Row="0" Grid.Column="1" 
+                BackgroundColor="White" HorizontalOptions="FillAndExpand"/>
 
             <Label Grid.Row="1" Grid.Column="0" 
                    Text="Description"
                    FontAttributes="Bold"
                     TextColor="#605F4F" 
                    VerticalOptions="Center"/>
-            <Entry  Grid.Row="1" Grid.Column="1" BackgroundColor="White" HorizontalOptions="FillAndExpand"/>
+            <Entry Text="{Binding Model.Description}" 
+                Grid.Row="1" Grid.Column="1" 
+                   BackgroundColor="White" HorizontalOptions="FillAndExpand"/>
 
             <Label Grid.Row="2" Grid.Column="0" 
                    Text="Price" 
                    FontAttributes="Bold"
                    TextColor="#605F4F" 
                    VerticalOptions="Center"/>
-            <Entry Grid.Row="2" Grid.Column="1" BackgroundColor="White" HorizontalOptions="FillAndExpand"/>
-
+            <Entry Text="{Binding PriceAsString}" 
+                   Grid.Row="2" Grid.Column="1" 
+                   BackgroundColor="White" HorizontalOptions="FillAndExpand"/>
+            
             <Label Grid.Row="3" Grid.Column="0" 
                    Text="Quantity" 
                    FontAttributes="Bold"
                     TextColor="#605F4F" 
                    VerticalOptions="Center"/>
-            <Entry Grid.Row="3" Grid.Column="1" BackgroundColor="White" HorizontalOptions="FillAndExpand" />
-            
+            <Entry Text="{Binding Model.Quantity}"
+                Grid.Row="3" Grid.Column="1" 
+                BackgroundColor="White" HorizontalOptions="FillAndExpand" />
         </Grid>
 
         <Button Text="Add" 
