Added add to cart and quantity picker to Shop View

--- a/Shop.MAUI/AppShell.xaml
+++ b/Shop.MAUI/AppShell.xaml
@@ -20,5 +20,8 @@
     <ShellContent
         ContentTemplate="{DataTemplate views:AddProductView}"
         Route="AddProductPage" />
+    <ShellContent
+        ContentTemplate="{DataTemplate views:ShoppingCartView}"
+        Route="ShoppingCartPage" />
 
 </Shell>
