--- a/Shop.MAUI/Views/InventoryView.xaml
+++ b/Shop.MAUI/Views/InventoryView.xaml
@@ -2,10 +2,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Shop.MAUI.Views.InventoryView"
-             Title="Inventory"
              NavigatedTo="ContentPage_NavigatedTo">
     <ScrollView>
         <VerticalStackLayout Padding="20" Spacing="10" BackgroundColor="White">
+            <Label Text="Inventory Management" 
+                   HorizontalOptions="Center"
+                    FontAttributes="Bold"
+                    FontSize="30" />
             <HorizontalStackLayout Spacing="10" Padding="10" HorizontalOptions="Center">
                 <ImageButton Source="home.png"
                         Clicked="GoToHomePage" 
