--- a/Shop.MAUI/Views/ShoppingCartView.xaml
+++ b/Shop.MAUI/Views/ShoppingCartView.xaml
@@ -2,40 +2,60 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Shop.MAUI.Views.ShoppingCartView"
-             NavigatedTo="ContentPage_NavigatedTo"
-             Title="ShoppingCartView">
-    <VerticalStackLayout>
-        <Button Text="Back"
-                Clicked="GoToShopPage"/>
-        
-        <CollectionView ItemsSource="{Binding Products}">
-            <CollectionView.ItemsLayout>
-                <GridItemsLayout Orientation="Vertical" 
-                             Span="5" 
-                             HorizontalItemSpacing="10"
-                             VerticalItemSpacing="10"/>
-            </CollectionView.ItemsLayout>
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <Frame BorderColor="Black" BackgroundColor="LightGray" CornerRadius="10" Margin="10" Padding="10">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                            </Grid.RowDefinitions>
-                            <Label Grid.Row="0" Text="{Binding Model.Name}" />
-                            <Label Grid.Row="1" Text="{Binding Model.Description}" />
-                            <Label Grid.Row="2" Text="{Binding Model.Price}" />
-                            <Label Grid.Row="3" Text="{Binding Model.Quantity}" />
-                            <Button Grid.Row="4" Text="Remove From Cart" Clicked="RemoveFromCart" CommandParameter="{Binding .}"/>
-                        </Grid>
-                    </Frame>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
+             NavigatedTo="ContentPage_NavigatedTo">
+    <ScrollView>
+        <VerticalStackLayout Spacing="15" Padding="10">
+            <Label Text="Shopping Cart" FontSize="30" FontAttributes="Bold" HorizontalOptions="Center"></Label>
+            <Frame BorderColor="LightGray" CornerRadius="10" WidthRequest="600">
+                <Frame.Shadow>
+                    <Shadow
+            Brush="Black"
+            Offset="10,10"
+            Opacity="0.5"
+            Radius="20" />
+                </Frame.Shadow>
+                <ListView ItemsSource="{Binding Products}" HorizontalOptions="Center" WidthRequest="600" SelectionMode="None">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Grid HorizontalOptions="Center" ColumnSpacing="20" Margin="0,10">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="120"/>
+                                        <ColumnDefinition Width="150"/>
+                                        <ColumnDefinition Width="150"/>
+                                        <ColumnDefinition Width="100"/>
+                                    </Grid.ColumnDefinitions>
+                                    <ImageButton Grid.Column="0" 
+                                                         Source="x.png" 
+                                                         Clicked="RemoveFromCart"
+                                                         CommandParameter="{Binding .}" 
+                                                         MaximumHeightRequest="45" 
+                                                         MaximumWidthRequest="45" 
+                                                         CornerRadius="10" 
+                                                         Padding="7" 
+                                                         BackgroundColor="#69C7B8"/>
+                                    <Label Grid.Column="1" Text="{Binding Model.Name}" VerticalOptions="Center"/>
+                                    <Label Grid.Column="2" Text="{Binding DisplayPriceQuantity}" VerticalOptions="Center"/>
+                                    <Label Grid.Column="3" Text="{Binding DisplayTotalItemPrice}" VerticalOptions="Center"/>
+                                </Grid>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Frame>
+            <Label Text="{Binding DisplayCartPrice}" FontAttributes="Bold" HorizontalOptions="Center"/>
+            <Button Text="Checkout"                  
+                    Clicked="CheckoutCart"
+                    MaximumWidthRequest="400"
+                    BackgroundColor="#69C7B8"
+                    TextColor="Black"/>
 
-    </VerticalStackLayout>
+            <Button Text="Continue Shopping"
+                    Clicked="GoToShopPage"   
+                    MaximumWidthRequest="400"
+                    BackgroundColor="#69C7B8"
+                    TextColor="Black"/>
+
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
