--- a/Shop.MAUI/Views/InventoryView.xaml
+++ b/Shop.MAUI/Views/InventoryView.xaml
@@ -44,7 +44,7 @@
                 </CollectionView.ItemsLayout>
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Frame BorderColor="Black" BackgroundColor="LightGray" CornerRadius="10" Margin="10" Padding="10">
+                        <Frame BorderColor="White" BackgroundColor="LightGray" CornerRadius="10" Margin="10" Padding="10">
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
@@ -56,7 +56,7 @@
                                 <Label Grid.Row="0" Text="{Binding Model.Id}" FontAttributes="Bold"/>
                                 <Label Grid.Row="1" Text="{Binding Model.Name}" />
                                 <Label Grid.Row="2" Text="{Binding Model.Description}" />
-                                <Label Grid.Row="3" Text="{Binding Model.Price}" />
+                                <Label Grid.Row="3" Text="{Binding Model.Price, StringFormat='{0:C}'}" />
                                 <Label Grid.Row="4" Text="{Binding Model.Quantity}" />
 
                                 <StackLayout  Spacing="10" Grid.Row="4" Grid.Column="1" Orientation="Horizontal" HorizontalOptions="EndAndExpand" VerticalOptions="End">
