Added Edit Product Functionality

--- a/Shop.MAUI/AppShell.xaml
+++ b/Shop.MAUI/AppShell.xaml
@@ -23,5 +23,8 @@
     <ShellContent
         ContentTemplate="{DataTemplate views:ShoppingCartView}"
         Route="ShoppingCartPage" />
+    <ShellContent
+        ContentTemplate="{DataTemplate views:EditProductView}"
+        Route="EditProductPage" />
 
 </Shell>
