--- a/Shop.MAUI/Views/InventoryView.xaml
+++ b/Shop.MAUI/Views/InventoryView.xaml
@@ -61,6 +61,8 @@
 
                                 <StackLayout  Spacing="10" Grid.Row="4" Grid.Column="1" Orientation="Horizontal" HorizontalOptions="EndAndExpand" VerticalOptions="End">
                                     <ImageButton Source="pencil.png"
+                                            Clicked="GoToEditProductPage"
+                                            CommandParameter="{Binding .}"
                                             CornerRadius="10"
                                             Padding="6"
                                             MaximumHeightRequest="45"
