--- a/Shop.MAUI/Views/EditProductView.xaml
+++ b/Shop.MAUI/Views/EditProductView.xaml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Shop.MAUI.Views.EditProductView"
-             Title="EditProductView">
+             x:Class="Shop.MAUI.Views.EditProductView">
     <VerticalStackLayout
         Padding="100"
         Spacing="20">
 
-        <Label Text="Add Product"
+        <Label Text="Edit Product"
                 VerticalOptions="Center"
                 HorizontalOptions="Center"
                 FontAttributes="Bold"
@@ -63,7 +62,7 @@
                 BackgroundColor="White" HorizontalOptions="FillAndExpand" />
         </Grid>
 
-        <Button Text="Save" 
+        <Button Text="Save Changes" 
                 Clicked="SaveProduct"
                 MaximumWidthRequest="200" 
                 BackgroundColor="#69C7B8"
