--- a/Shop.MAUI/Views/ShoppingCartView.xaml
+++ b/Shop.MAUI/Views/ShoppingCartView.xaml
@@ -11,7 +11,7 @@
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
-                                <Grid HorizontalOptions="Center" ColumnSpacing="20" Margin="0,10">
+                                <Grid ColumnSpacing="20" Margin="0,10">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="120"/>
                                         <ColumnDefinition Width="150"/>
