--- a/Shop.MAUI/Views/ShopView.xaml
+++ b/Shop.MAUI/Views/ShopView.xaml
@@ -36,7 +36,10 @@
                     BackgroundColor="#69C7B8"
                     MaximumHeightRequest="50"
                     MaximumWidthRequest="50"/>
-                <Label Text="{Binding TotalCartPrice}" VerticalOptions="Center"/>
+                <Picker Title="Select Shopping Cart"
+                        ItemsSource="{Binding ShoppingCartList}"
+                        SelectedItem="{Binding SelectedCart}"
+                        ItemDisplayBinding="{Binding Cart.Name}"/>
             </HorizontalStackLayout>
             <CollectionView ItemsSource="{Binding Products}">
                 <CollectionView.ItemsLayout>
