--- a/Shop.MAUI/AppShell.xaml
+++ b/Shop.MAUI/AppShell.xaml
@@ -23,4 +23,7 @@
     <ShellContent
         ContentTemplate="{DataTemplate views:ShoppingCartView}"
         Route="ShoppingCartPage" />
+    <ShellContent
+        ContentTemplate="{DataTemplate views:AddShoppingCartView}"
+        Route="AddShoppingCartPage" />
 </Shell>
