--- a/Shop.MAUI/Views/ShopView.xaml
+++ b/Shop.MAUI/Views/ShopView.xaml
@@ -40,6 +40,7 @@
                         ItemsSource="{Binding ShoppingCartList}"
                         SelectedItem="{Binding SelectedCart}"
                         ItemDisplayBinding="{Binding Cart.Name}"/>
+                <Button Clicked="AddCart"/>
             </HorizontalStackLayout>
             <CollectionView ItemsSource="{Binding Products}">
                 <CollectionView.ItemsLayout>
