--- a/Shop.MAUI/Views/ShoppingCartView.xaml
+++ b/Shop.MAUI/Views/ShoppingCartView.xaml
@@ -19,14 +19,14 @@
                                         <ColumnDefinition Width="100"/>
                                     </Grid.ColumnDefinitions>
                                     <ImageButton Grid.Column="0" 
-                                                         Source="x.png" 
-                                                         Clicked="RemoveFromCart"
-                                                         CommandParameter="{Binding .}" 
-                                                         MaximumHeightRequest="45" 
-                                                         MaximumWidthRequest="45" 
-                                                         CornerRadius="10" 
-                                                         Padding="7" 
-                                                         BackgroundColor="#69C7B8"/>
+                                                 Source="x.png" 
+                                                 Clicked="RemoveFromCart"
+                                                 CommandParameter="{Binding .}" 
+                                                 MaximumHeightRequest="45" 
+                                                 MaximumWidthRequest="45" 
+                                                 CornerRadius="10" 
+                                                 Padding="7" 
+                                                 BackgroundColor="#69C7B8"/>
                                     <Label Grid.Column="1" Text="{Binding Model.Name}" VerticalOptions="Center"/>
                                     <Label Grid.Column="2" Text="{Binding DisplayPriceQuantity}" VerticalOptions="Center"/>
                                     <Label Grid.Column="3" Text="{Binding DisplayTotalItemPrice}" VerticalOptions="Center"/>
@@ -36,7 +36,7 @@
                     </ListView.ItemTemplate>
                 </ListView>
             </Frame>
-            <Label Text="{Binding DisplayCartPrice}" FontAttributes="Bold" HorizontalOptions="Center"/>
+            <Label Text="DisplayCartPrice" FontAttributes="Bold" HorizontalOptions="Center"/>
             <Button Text="Checkout"                  
                     Clicked="CheckoutCart"
                     MaximumWidthRequest="400"
