--- a/Shop.MAUI/Views/InventoryView.xaml
+++ b/Shop.MAUI/Views/InventoryView.xaml
@@ -34,6 +34,16 @@
                     MaximumHeightRequest="50"
                     MaximumWidthRequest="50"
                     HorizontalOptions="End"/>
+                <BoxView BackgroundColor="White" 
+                    WidthRequest="50"/>
+                <ImageButton Source="settings.png"
+                    Clicked="GoToConfigurationPage"
+                    CornerRadius="10"
+                    Padding="6"
+                    BackgroundColor="#69C7B8"
+                    MaximumHeightRequest="50"
+                    MaximumWidthRequest="50"
+                    HorizontalOptions="End"/>
             </HorizontalStackLayout>
             <CollectionView ItemsSource="{Binding Products}">
                 <CollectionView.ItemsLayout>
